bugfix/z-index_bug

--- a/css/main.css
+++ b/css/main.css
@@ -374,6 +374,7 @@ a:hover, a:focus {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 3;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -680,7 +681,7 @@ a:hover, a:focus {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
     padding: 48px 0 48px 40px;
     background-color: var(--base-bg-color);
   }
@@ -708,7 +709,7 @@ a:hover, a:focus {
   position: absolute;
   top: 10px;
   right: 15px;
-  z-index: 999;
+  z-index: 2;
   display: inline-flex;
   margin-left: auto;
   padding: 0;
