--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 
     padding: 48px 0 48px 40px;
     background-color: var(--base-bg-color);
@@ -47,7 +47,7 @@
   position: absolute;
   top: 10px;
   right: 15px;
-  z-index: 999;
+  z-index: 2;
 
   display: inline-flex;
   margin-left: auto;
